# cuckoo

./: .travis.yml  CMakeLists.txt  Makefile
src/: Makefile
src/crypto/: base64.h  siphash.cuh  siphash.hpp  siphashxN.h
src/cuckoo/: Makefile  cuckoo.c  lean.cpp  lean.cu  lean.hpp  mean.cpp  mean.cu  mean.hpp
test/: cmp_versions.sh
